<resources>
    <string name="app_name">Coins IData</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Price label:</string>
    <string name="min_price_label">Min price:</string>
    <string name="max_price_label">Max price:</string>
    <string name="last_market_label">Last market:</string>
    <string name="last_updated_label">Last update:</string>
    <string name="change_24_hours">Change 24 hour:</string>
    <string name="open_24_hours">Open 24 hour:</string>
    <string name="high_24_hours">High 24 hour:</string>
    <string name="low_24_hours">Low 24 hour:</string>
    <string name="symbols_change_template">%s%%</string>
    <string name="icon_coin_logo_info">Icon Coin Logo</string>
</resources>